# Testownik

Kolokwiarz/core/: questioneditor.cpp  questioneditor.h
Testownik/: CMakeLists.txt  mainwindow.cpp
Testownik/base/: miernictwoForTesting.json
Testownik/core/: QuestionSource.h  jsonquestionsource.cpp  jsonquestionsource.h  question.h  quizmanager.cpp  quizmanager.h  textquestion.cpp  textquestion.h
